--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # 数据库链接
-spring.datasource.url=jdbc:mysql://localhost:3306/common?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/red_packet?serverTimezone=UTC
 # 用户名
 spring.datasource.username=root
 # 密码
